fix book-selection-menu-chapter-list scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -620,7 +620,7 @@ h2 {
   width: 33em;
   min-height: 20em;
   max-height: 52em;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 @media only screen and (min-width: 770px) {
